[package]
name = "eurus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
directories = "5.0.1"
docker-compose-types = { version = "0.14.0", features = ["yml"] }
inquire = { version = "0.7.5", features = ["editor"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
